Supporting trailing lambdas on invocations.